--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="https://cdn1.iconfinder.com/data/icons/animals-18/154/cat-seat-skin-body-animal-512.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,600,600i,700,800" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" href="dist/css/main.css?v=01">
 </head>
 
@@ -43,7 +44,7 @@
             <div class="contentX">
               <a href="http://712075.s.dedikuoti.lt:5000" target="_blank">
                 <div class="content-overlay"></div>
-                <img class="content-image" src="./img/restaurant..jpg">
+                <img class="content-image" src="./img/restaurant.jpg">
                 <div class="content-details fadeIn-top">
                   <h3>A Food Ordering System Application</h3>
                   <p>Made with: ReactJS (Redux), NodeJS</p>
@@ -65,6 +66,7 @@
               </a>
             </div>
           </div>
+
   <div class="containerR">
   <div class="contentX">
     <a href="http://712075.s.dedikuoti.lt:7001" target="_blank">
@@ -75,6 +77,7 @@
       <p>Made with: Redux</p>
       <p>Completion: 100%</p>
     </div>
+    </a>
   </div>
 </div>
 
@@ -83,7 +86,7 @@
       <div class="content-overlay"></div>
       <img class="content-image" src="./img/basketball.jpg">
       <div class="content-details fadeIn-top">
-        <h3>A basketball news (w/sidebar) app which collects and displays info from JSON. Other functionality include embedded clips, articles.</h3>
+        <h3>A basketball news (w/sidebar) app which collects and displays info from JSON. </h3>
         <p>Being made with: ReactJS, Redux?, Node?</p>
         <p>Completion: 40%</p>
       </div>
@@ -96,12 +99,34 @@
   <div class="modal-content">
     <span class="close-button">×</span>
     <h1> Currently under production. Due date - 2018.09
-      <a class="continue" href="https://unsplash.com/photos/HkTMcmlMOUQ" target="_blank">
-      Tęsti
-      </a>
     </h1>
   </div>
 </div>
+
+<section class="blueline-2">
+  <div class="container">
+    <h2>About Me</h2>
+    <div class="currentLanguage">EN</div>
+    <div class="button-change button">Change language</div>
+    <div class="clearfix"></div>
+  </div>
+</section>
+
+<section class="about-me">
+<div class="about-meDiv">
+  <h1 class="en">A communicative, always deeper knowledge seeking junior web developer constantly looking for new career opportunities. Social skills developed during societal studies (A masters degree in law). Meanwhile, my first contact with web development occured in ~2005 though in a form of WAP HTML coding. Although I decided to approach a different a different career path, web development was always in the back of my mind.
+    After I graduated from aforementioned studies in 2017, I decided to give web developing a proper try, therefore attented "Baltic Talents Academy" in Vilnius from 2017-11 to 2018-06. Succesfully graduated. I have been learning full-stack web development including:
+    <br> <span>HTML</span>,<br> <span>CSS</span>,<br> <span>JS</span>,<br> <span>jQuery</span>,<br> <span>PHP(w/Laravel)</span>,<br> <span>ReactJS(w/Redux)</span>,<br> <span>NodeJS(w/Express)</span> <br> <span> and a handful of various libraries)</span>,<br> although I prefer the front-end part.
+    I am now able to state, that's what I really want to do in my life.
+  </h1>
+  <h1 class="lt">
+    Komunikabilus, nuolat siekiantis gilinti žinias pradedantis programuotojas ieško darbo šioje srityje. Iš kitų igūdžių išskirčiau socialinius, kurie išlavinti kitos krypties (teisė, magistras) studijų metu, todėl nėra svetimas ir komandinis darbas, atstovavimas grupei, prezentacijos.<br>
+    Pirmas kontaktas su programavimu - maždaug 2005 metais, WAP HTML forma. Studijuoti pasirinkau ne IT kryptį, tačiau programavimas ir nuolat kintančios IT tendencijos visuomet buvo omenyje ir akiratyje. Apsisprendęs rimtai išbandyti save IT srityje įstojau į "Baltic Talents" akademiją Vilniuje, kurioje mokiausiai nuo 2017-11 iki 2018-06, intensyviu kursu. Studijuoti dalykai:
+    <br> <span>HTML</span>,<br> <span>CSS</span>,<br> <span>JS</span>,<br> <span>jQuery</span>,<br> <span>PHP(w/Laravel)</span>,<br> <span>ReactJS(w/Redux)</span>,<br> <span>NodeJS(w/Express)</span> <br> <span> bei įvairios bibliotekos)</span>,<br> prioritetą teikčiau front-end daliai.
+    Sėkmingai baigus kursus toliau savarankiškai <span class="underline"> NUOLATOS </span> studijuoju minėtas ir naujas kalbas, plėtoju pradėtus ir kuriu naujus projektus.
+  </h1>
+</div>
+</section>
 
 <section class="blueline-2">
   <div class="container">
@@ -110,17 +135,18 @@
 
 <section>
   <div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18452.01109629476!2d25.272775101042235!3d54.68320404428877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92f6170c220eccc4!2sLietuvos+nacionalinis+dramos+teatras!5e0!3m2!1slt!2slt!4v1517013428188" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe width="100%" height="400px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pergal%C4%97s%20gatv%C4%97%2030%2C%20Grigai%C4%8Diai%2C%20Lithuania&key=AIzaSyA6XK750OUbPMd9XjY_uY4rFysQnvMhSSI" allowfullscreen></iframe>
   </div>
 </section>
 
 
-<!--<?php include 'parts/footer.php' ?>-->
+
+
 <footer>
   <section class="blueline-2">
     <div class="container">
-      <h2>GO AHEAD AND FIND OUT HOW WE CAN HELP YOU!</h2>
-      <div class="button">GET IN TOUCH</div>
+      <h2>Contacts/Kontaktai</h2>
+      <div class="button">Get in touch/Susisiekite</div>
     </div>
   </section>
 
@@ -128,13 +154,11 @@
   <section class="footer-list">
     <div class="container-footer">
       <div class="wrapperX">
-        <h3>Get IN TOUCH </h3>
-        <p>Lorem Ipsum is simply dummy text of the
-          printing and typesetting industry. </p>
+        <h3>Get IN TOUCH/Susisiekite </h3>
         <ul>
-          <li class="address"><a href="https://www.google.com/maps">84 Street, City, State 24813</a></li>
-          <li class="mobile"><a href="tel:+001234567890">+370 89 8888</a></li>
-          <li class="email"><a href="mailto:info@yourcompany.com">info@yourdomain.com</a></li>
+          <li class="address"><a href="https://www.google.com/maps">Address / adresas Pergalės 30-2, Vilniaus raj.</a></li>
+          <li class="mobile"><a href="tel:+001234567890">Cellphone / mob.: +37064393209</a></li>
+          <li class="email"><a href="mailto:info@yourcompany.com">Email / el. paštas: ignas.zlatkus@gmail.com</a></li>
         </ul>
 
       </div>
@@ -148,7 +172,7 @@
 
   <section class="blackline">
     <div class="container-bottom">
-      <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Ignas Z All Rights Reserved</p>
+      <p>This page was made with vanilla JS by Ignas Z <i class="fa fa-heart" aria-hidden="true"></i> All Rights Reserved</p>
     </div>
   </section>
 </footer>
