medias updated, effect by JS logic added/fixed

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
             </div>
             <h2>Ignas Zlatkus</h2>
         </div>
+      <div class="port"> <h3></h3></div>
     </div>
 </section>
 
@@ -98,8 +99,8 @@
 <div class="modal">
   <div class="modal-content">
     <span class="close-button">×</span>
-    <h1> Currently under production. Due date - 2018.09
-    </h1>
+    <h1> Currently in production. Due date - 2018.09 <span><a href="https://github.com/ignas26/euroleague_news_app-react" target="_blank">Github</a></span> </h1>
+    <div class="clearfix"></div>
   </div>
 </div>
 
@@ -107,7 +108,7 @@
   <div class="container">
     <h2>About Me</h2>
     <div class="currentLanguage">EN</div>
-    <div class="button-change button">Change language</div>
+    <div class="button-change">Change language</div>
     <div class="clearfix"></div>
   </div>
 </section>
