additional medias and JS logic (for animations) added + audio file

--- a/client/index.html
+++ b/client/index.html
@@ -115,15 +115,15 @@
 
 <section class="about-me">
 <div class="about-meDiv">
-  <h1 class="en">A communicative, always deeper knowledge seeking junior web developer constantly looking for new career opportunities. Social skills developed during societal studies (A masters degree in law). Meanwhile, my first contact with web development occured in ~2005 though in a form of WAP HTML coding. Although I decided to approach a different a different career path, web development was always in the back of my mind.
-    After I graduated from aforementioned studies in 2017, I decided to give web developing a proper try, therefore attented "Baltic Talents Academy" in Vilnius from 2017-11 to 2018-06. Succesfully graduated. I have been learning full-stack web development including:
-    <br> <span>HTML</span>,<br> <span>CSS</span>,<br> <span>JS</span>,<br> <span>jQuery</span>,<br> <span>PHP(w/Laravel)</span>,<br> <span>ReactJS(w/Redux)</span>,<br> <span>NodeJS(w/Express)</span> <br> <span> and a handful of various libraries)</span>,<br> although I prefer the front-end part.
-    I am now able to state, that's what I really want to do in my life.
+  <h1 class="en">A communicative, always deeper knowledge seeking junior web developer constantly looking for new career opportunities. Social skills developed during societal studies (A masters degree in law). Meanwhile, my first contact with web development occured in ~2005 though in a form of WAP HTML coding. Although I decided to approach a different a different career path, web development was always in the back of my mind.<br>
+    After I graduated from aforementioned studies in 2017, I decided to give coding a proper try, therefore attented "Baltic Talents Academy" in Vilnius from 2017-11 to 2018-06. Succesfully graduated. I have been learning full-stack web development including:
+    <br> <span>HTML</span>,<br> <span>CSS (&& Sass)</span>,<br> <span>JS (vanilla)</span>,<br> <span>jQuery</span>,<br> <span>PHP (&& Laravel)</span>,<br> <span>ReactJS (&& Redux)</span>,<br> <span>NodeJS (&& Express)</span> <br> <span> and a handful of various libraries)</span>,<br> although I prefer the front-end part. Moreover, I have basic-level Linux (VPS) and Photoshop knowledge.
+    After finishing BA Academy I continue to study the aforementioned programming languages and already started new projects on my own.
   </h1>
   <h1 class="lt">
     Komunikabilus, nuolat siekiantis gilinti žinias pradedantis programuotojas ieško darbo šioje srityje. Iš kitų igūdžių išskirčiau socialinius, kurie išlavinti kitos krypties (teisė, magistras) studijų metu, todėl nėra svetimas ir komandinis darbas, atstovavimas grupei, prezentacijos.<br>
     Pirmas kontaktas su programavimu - maždaug 2005 metais, WAP HTML forma. Studijuoti pasirinkau ne IT kryptį, tačiau programavimas ir nuolat kintančios IT tendencijos visuomet buvo omenyje ir akiratyje. Apsisprendęs rimtai išbandyti save IT srityje įstojau į "Baltic Talents" akademiją Vilniuje, kurioje mokiausiai nuo 2017-11 iki 2018-06, intensyviu kursu. Studijuoti dalykai:
-    <br> <span>HTML</span>,<br> <span>CSS</span>,<br> <span>JS</span>,<br> <span>jQuery</span>,<br> <span>PHP(w/Laravel)</span>,<br> <span>ReactJS(w/Redux)</span>,<br> <span>NodeJS(w/Express)</span> <br> <span> bei įvairios bibliotekos)</span>,<br> prioritetą teikčiau front-end daliai.
+    <br> <span>HTML</span>,<br> <span>CSS (&& Sass)</span>,<br> <span>JS (vanilla)</span>,<br> <span>jQuery</span>,<br> <span>PHP (&& Laravel)</span>,<br> <span>ReactJS (&& Redux)</span>,<br> <span>NodeJS (&& Express)</span> <br> <span> bei įvairios bibliotekos)</span>,<br> prioritetą teikčiau front-end daliai. Taip pat turiu <span>Linux </span> (darbas su VPS serveriu) bei <span> Photoshop </span> pagrindus.
     Sėkmingai baigus kursus toliau savarankiškai <span class="underline"> NUOLATOS </span> studijuoju minėtas ir naujas kalbas, plėtoju pradėtus ir kuriu naujus projektus.
   </h1>
 </div>
