--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,600,600i,700,800" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <link rel="stylesheet" href="dist/css/main.css?v=01">
+  <link rel="stylesheet" href="dist/css/main.css?v=02">
 </head>
 
 <section class="landing-page">
@@ -82,7 +82,21 @@
   </div>
 </div>
 
-  <div class="containerL trigger">
+  <div class="containerL">
+  <div class="contentX">
+    <a href="http://712075.s.dedikuoti.lt:7002" target="_blank">
+    <div class="content-overlay"></div>
+    <img class="content-image" src="./img/animations.jpg">
+    <div class="content-details fadeIn-top">
+      <h3>Various CSS animations - the result of CSS playgrounding</h3>
+      <p>Made with: CSS (&& Gulp, Sass)</p>
+      <p>Completion: 100%</p>
+    </div>
+    </a>
+  </div>
+</div>
+
+  <div class="containerR trigger">
     <div class="contentX">
       <div class="content-overlay"></div>
       <img class="content-image" src="./img/basketball.jpg">
