contacts section update

--- a/client/index.html
+++ b/client/index.html
@@ -131,8 +131,8 @@
 <div class="about-meDiv">
   <h1 class="en">A communicative, always deeper knowledge seeking junior web developer constantly looking for new career opportunities. Social skills developed during societal studies (A masters degree in law). Meanwhile, my first contact with web development occured in ~2005 though in a form of WAP HTML coding. Although I decided to approach a different a different career path, web development was always in the back of my mind.<br>
     After I graduated from aforementioned studies in 2017, I decided to give coding a proper try, therefore attented "Baltic Talents Academy" in Vilnius from 2017-11 to 2018-06. Succesfully graduated. I have been learning full-stack web development including:
-    <br> <span>HTML</span>,<br> <span>CSS (&& Sass)</span>,<br> <span>JS (vanilla)</span>,<br> <span>jQuery</span>,<br> <span>PHP (&& Laravel)</span>,<br> <span>ReactJS (&& Redux)</span>,<br> <span>NodeJS (&& Express)</span> <br> <span> and a handful of various libraries)</span>,<br> although I prefer the front-end part. Moreover, I have basic-level Linux (VPS) and Photoshop knowledge.
-    After finishing BA Academy I continue to study the aforementioned programming languages and already started new projects on my own.
+    <br> <span>HTML</span>,<br> <span>CSS (&& Sass)</span>,<br> <span>JS (vanilla)</span>,<br> <span>jQuery</span>,<br> <span>PHP (&& Laravel)</span>,<br> <span>ReactJS (&& Redux)</span>,<br> <span>NodeJS (&& Express)</span> <br> <span> and a handful of various libraries)</span>,<br> although I prefer the front-end part. Moreover, I have basic-level <span>Linux (VPS)</span> and <span> Photoshop</span> knowledge.
+    After finishing BA Academy I <span class="underline"> continually </span> study the aforementioned programming languages and already started new projects on my own.
   </h1>
   <h1 class="lt">
     Komunikabilus, nuolat siekiantis gilinti žinias pradedantis programuotojas ieško darbo šioje srityje. Iš kitų igūdžių išskirčiau socialinius, kurie išlavinti kitos krypties (teisė, magistras) studijų metu, todėl nėra svetimas ir komandinis darbas, atstovavimas grupei, prezentacijos.<br>
@@ -171,9 +171,10 @@
       <div class="wrapperX">
         <h3>Get IN TOUCH/Susisiekite </h3>
         <ul>
-          <li class="address"><a href="https://www.google.com/maps">Address / adresas Pergalės 30-2, Vilniaus raj.</a></li>
-          <li class="mobile"><a href="tel:+001234567890">Cellphone / mob.: +37064393209</a></li>
-          <li class="email"><a href="mailto:info@yourcompany.com">Email / el. paštas: ignas.zlatkus@gmail.com</a></li>
+          <li class="github"><a href="https://github.com/ignas26">Github</a> </li>
+          <li class="address">Address / adresas Pergalės 30-2, Vilniaus raj.</li>
+          <li class="mobile"><a href="tel:+37064393209">Cellphone / mob.: +37064393209</a></li>
+          <li class="email"><a href="mailto:ignas.zlatkus@gmail.com">Email / el. paštas: ignas.zlatkus@gmail.com</a></li>
         </ul>
 
       </div>
